--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@bprogress/next": "^3.2.12",
     "axios": "^1.12.2",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.22",
+    "js-cookie": "^3.0.5",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
